--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -55,10 +55,10 @@ jobs:
           terraform init
           terraform validate
          
-
       - name: tflint
         uses: reviewdog/action-tflint@master
         with:
+          tflint_version: v0.29.0
           github_token: ${{ secrets.GITHUB }}
           working_directory: ${{ matrix.directory }}
           fail_on_error: 'true'
