--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -4,27 +4,30 @@ on:
     branches:
       - master
     types: [labeled]
+
 jobs:
-  terraform:
-    name: 'Terraform'
+  Terratest:
+    name: 'terratest'
     runs-on: ubuntu-latest
     steps:
+
       - name: 'Checkout'
-        uses: actions/checkout@master
-      - name: Configure AWS Credentials
+        uses: actions/checkout@v2.3.4
+
+      - name: 'Configure AWS Credentials'
         uses: clouddrove/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
           aws-region: us-east-2
-      - name: 'Terratest'
-        if: ${{ github.event.label.name == 'terratest' }}
+
+      - name: 'terratest'
         uses: 'clouddrove/github-actions@v9.0.2'
         with:
           actions_subcommand: 'terratest'
-          tf_actions_working_dir: ./_test
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          if: ${{ github.event.label.name == 'terratest' }}
+          tf_actions_working_dir: '_test'
+
       - name: 'Slack Notification'
         uses: clouddrove/action-slack@v2
         with:
